master way more going on behind the scenesbut still ugly

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <main>
         <article>
           <h1>Hello, World!</h1>
-          <p>This is my first post. This site looks pretty awful for sure. But I'm just getting started.</p>
+          <p>This is my first post. I guess it's not so much a post as a placeholder.</p>
         </article>
       </main>
       <aside>
