--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <section class="app-page-header__5jZfQ">
       <h1 class="app-project-name__155JV">Cayman</h1>
-      <h2 class="app-project-tagline__3_dFA">A responsive theme for your project on GitHub Pages</h2>
+      <h2 class="app-project-tagline__3_dFA">A responsive doggo for your project on GitHub Pages</h2>
       <a href="#" class="app-btn__1yAvY">View on GitHub</a>
       <a href="#" class="app-btn__1yAvY">Download .zip</a>
       <a href="#" class="app-btn__1yAvY">Download .tar.gz</a>
